# whether_commit

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  ai_application_overview_prd_light.md  ai_application_overview_technical_design_light.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
backend/: .env.reasoning.example  requirements.txt
backend/app/: main.py
backend/tests/: test_agent_harness_schema.py  test_agent_harness_service.py  test_agent_instruction_contract.py  test_agentic_change_assessment_builder.py  test_assessment_schema.py  test_assessment_storage.py  test_assessments_endpoint.py  test_capability_inference.py  test_capability_inference_service.py  test_change_entity_extraction.py  test_change_impact_adapter.py  test_codex_file_assessment_adapter.py  test_codex_session_reader.py  test_codex_test_result_analysis_adapter.py  test_git_diff_only_adapter.py  test_graph_adapter.py  test_graph_flow_extraction.py  test_jobs_manager.py  test_jobs_manager_agent_progress.py  test_llm_reasoning_service.py  test_overview_endpoint.py  test_overview_inference.py  test_precommit_review_builder.py  test_precommit_review_capture.py  test_precommit_review_endpoint.py  test_precommit_review_fingerprints.py  test_precommit_review_policy.py  test_precommit_review_risk.py  test_precommit_review_verification.py  (+8 more)
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
review_graph/: mapping.yaml
(+170 files in other folders)
