[project]
name = "whether_commit"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.27.1",
  "pydantic>=2.6.3",
  "PyYAML>=6.0.1",
]

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.2.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]
